# h5ad_inspect

./: .gitignore  README.md  flake.nix  result
.github/workflows/: pr-build-binaries.yml  release.yml  test.yml
h5ad_inspect/: Cargo.toml  README.md
h5ad_inspect/completions/: h5ad-inspect.fish
h5ad_inspect/src/: main.rs
tests/: conftest.py  reference.py  test_columns.py  test_matrix.py  test_metadata.py
